# ice-autoATES

./: .coverage  .gitignore  .gitmodules  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  e2e.yml  integration.yml
ates/: area.py  dem.py  evaluate.py  hrdem.py  validate.py
ates-app/: app.py  main.py  pyproject.toml
ates-app/ates/: advisory.py  areas.py  gpx.py  sample.py
ates-app/data/areas/loder-peak/: metadata.json
ates-app/data/gpx/: Loder-Peak-Descent.gpx  Loder-Peak.gpx
ates-app/pages/: 01_Route_Analysis.py  02_Area_Map.py
ates-app/tests/: test_advisory.py
ates/models/: autoatesv2.py  simple.py
data/areas/bow-summit/: metadata.json
data/areas/internation-mountain/: ates_gen.tif  metadata.json
data/areas/loder-peak/: ates_gen.tif
data/polar-circus/: output_be.tif
data/validation/brandywine/: layers.kmz  results.json
data/validation/elfin-lakes/: layers.kmz  results.json
data/validation/mount-seymour/: layers.kmz  results.json
docs/: GLOSSARY.md  autoates-data-pipeline.md  benchmark.md  flowpy-refactor.md  long-term-strategy.md
docs/diagrams/: AWS-Diagram.drawio
notebooks/: analysis-bow-summit.ipynb  d8-flow.ipynb  geohashing.ipynb  rule-based.ipynb  validation-dsm.ipynb  validation-mrdem.ipynb  validation-v2.ipynb  validation.ipynb
scripts/: build_dataset.py  fetch_avcan_areas.py  generate_ates_tif.py
tests/: test_area.py  test_evaluate.py  test_gpx.py  test_sample.py  test_simple.py  test_validate.py
tests/data/seymour/: bounds.json  dem.npy
tests/e2e/: test_area.py
tests/integration/: test_area.py
