[project]
name = "ice-autoates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "streamlit>=1.19.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
