[project]
name = "ice-autoates"
version = "0.1.0"
description = "AutoATES — automated avalanche terrain exposure classification"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "arrow>=1.4.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "gpxpy>=1.6.2",
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "pandas>=3.0.1",
    "pyproj>=3.7",
    "rasterio>=1.5",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "streamlit-folium>=0.27.1",
]

[project.optional-dependencies]
autoates = ["autoates-v2-0"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pyinstrument>=5.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
geo = [
    "gdal==3.10.3",
]

[tool.uv.sources]
autoates-v2-0 = { git = "https://github.com/jacKlinc/AutoATES-v2.0" }
