[project]
name = "ates-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "gpxpy>=1.6.2",
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "pyproj>=3.7",
    "rasterio>=1.5",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
    "streamlit-folium>=0.27.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
